<resources>
    <string name="app_name">FWIP</string>
    <string name="title_activity_posting_map">FWIP</string>
    <string name="title_activity_post__event">New Event</string>
    <string name="new_act_button">New Event</string>
    <string name="choose_next">Choose Location</string>
    <string name="finalize_event">Post!</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_text">Delete</string>
    <string name="name">Name:</string>
    <string name="description">Location:</string>
    <string name="food_types">Food:</string>
    <string name="parse_app_id">hX4SIkYg6kaNIHMWUlrs6FUqgQovvIXLFYYTDHk3</string>
    <string name="parse_client_id">cUbWKQ8w4q6uYOV5SbWPKRiOXlyRjGwuPyMv5UXe</string>
    <string name="help_string">Welcome to Fwip!\n\nTap on blue markers to find out about food near you, or tap the New Event button to tell others about your food! Please note users can only post 1 event per hour!\n\nTapping the Delete button will delete the marker you have placed on the map, and will allow you to place a new event!\n\nTap anywhere to close, and thanks for using Fwip :D</string>
</resources>
