<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostingMapActivity" >

    <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scrollbars="vertical"
        class="com.google.android.gms.maps.SupportMapFragment"/>

    <Button
        android:id="@+id/new_event_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:text="@string/new_act_button"
        android:background="@drawable/button"
        android:textColor="#000000"
        android:visibility="visible"
        />

    <!--<Button-->
        <!--android:id="@+id/clearButton"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="top|left"-->
        <!--android:text="Clear"-->
        <!--android:onClick="clearMarkers"/>-->

    <Button
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:text="HELP"
        android:onClick="onHelpClick"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|end"
        android:layout_weight="2">
        <Button
            android:id="@+id/save_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/finalize_event"
            android:background="@drawable/button"
            android:textColor="#000000"
            android:visibility="gone"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/cancel_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/cancel"
            android:background="@drawable/bad_button"
            android:textColor="#000000"
            android:visibility="gone"
            android:layout_weight="1"/>
    </LinearLayout>
</FrameLayout>
