<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:weightSum="2">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:layout_weight="1">
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/content_post__event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_weight="1">

        <!--The Event Name-->
        <TextView
            android:id="@+id/EventName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/offBlack"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/InputName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:textCursorDrawable="@null"
            android:textColor="@color/purple"
            android:layout_below="@id/EventName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/purple"
            android:layout_marginBottom="12dp"/>

        <!--Event Description-->
        <TextView
            android:id="@+id/EventDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/offBlack"
            android:layout_below="@id/InputName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/InputDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:textCursorDrawable="@null"
            android:textColor="@color/purple"
            android:layout_below="@id/EventDescription"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/purple"
            android:layout_marginBottom="12dp"/>

        <!--Types of Food at event -->
        <TextView
            android:id="@+id/FoodTypes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_types"
            android:textColor="@color/offBlack"
            android:layout_below="@id/InputDescription"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/InputFood"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:textCursorDrawable="@null"
            android:textColor="@color/purple"
            android:layout_below="@id/FoodTypes"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/purple"
            android:layout_marginBottom="56dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom|end"
            android:layout_weight="2"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/SaveData"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:text="@string/choose_next"
                android:textColor="@color/offWhite"
                android:backgroundTint="@color/purple"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/Cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:textColor="@color/purple"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
